[tool.poetry]
name = "repl_nix_ascii-webcam"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
opencv-python = "^4.6.0"
numba = "^0.56.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
